--- a/config/aws.yml
+++ b/config/aws.yml
@@ -2,6 +2,10 @@ development:
   access_key_id: AKIAJAD7ZWPVRER37QRQ
   secret_access_key: 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
 
+# production:
+#   access_key_id: AWS_ACCESS_KEY_ID
+#   secret_access_key: AWS_SECRET_ACCESS_KEY
+
 production:
-  access_key_id: AWS_ACCESS_KEY_ID
-  secret_access_key: AWS_SECRET_ACCESS_KEY
+  access_key_id: AKIAJAD7ZWPVRER37QRQ
+  secret_access_key: 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  
