--- a/config/aws.yml
+++ b/config/aws.yml
@@ -1,6 +1,6 @@
 development:
-  access_key_id: AKIAJAD7ZWPVRER37QRQ
-  secret_access_key: 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
+  access_key_id: <%= ENV['AWS_ACCESS_KEY_ID'] %>
+  secret_access_key: <%= ENV['AWS_SECRET_ACCESS_KEY'] %>
 
 production:
   access_key_id: <%= ENV['AWS_ACCESS_KEY_ID'] %>
