--- a/config/database.yml
+++ b/config/database.yml
@@ -3,7 +3,7 @@ development:
   encoding: utf8
   database: project_development
   pool: 5
-  username: 
+  username:
   password:
 
 test: &TEST
@@ -11,7 +11,7 @@ test: &TEST
   encoding: utf8
   database: project_test
   pool: 5
-  username: 
+  username:
   password:
 
 production:
@@ -19,6 +19,8 @@ production:
   encoding: utf8
   database: project_production
   pool: 5
-  username: 
+  username:
   password:
-  
+
+cucumber:
+  <<: *TEST
